fix for ensuring the rename text doesn't overflow

--- a/app/styles/ui/changes/_changes-view.scss
+++ b/app/styles/ui/changes/_changes-view.scss
@@ -18,6 +18,7 @@
     .path {
       flex-grow: 1;
       display: flex;
+      min-width: 0;
     }
 
     @include octicon-status;
